--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
         
         <!--footer start-->
         <footer>
-           <p>&#169; Copyright By<strong> ANANYA ROY CHOWDHURY.</strong> All Rights Reserved 2025</p>     
+            <div class="container">
+                <p>&#169; Copyright By<span> ANANYA ROY CHOWDHURY.</span> All Rights Reserved 2025</p> 
+            </div>
         </footer>
         <!--footer end-->
     </body>
