--- a/index.html
+++ b/index.html
@@ -97,8 +97,12 @@
         <!--footer start-->
         <footer>
             <div class="container">
-                <p>&#169; Copyright By<span> ANANYA ROY CHOWDHURY.</span> All Rights Reserved 2025</p> 
+                <div class="f_center">
+                    <p>&#169; Copyright By<span> ANANYA ROY CHOWDHURY.</span> All Rights Reserved 2025</p>
+                </div>
+                
             </div>
+                
         </footer>
         <!--footer end-->
     </body>
